[project]
name = "mcp-server-gemini-image-generator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "bongki Lee",email = "qhdrl12@gmail.com"}]
keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }
dependencies = [
    "fastmcp>=0.4.1",
    "google>=3.0.0",
    "google-genai>=1.7.0",
    "pillow>=11.1.0",
    "python-dotenv>=0.21.0", # 添加 python-dotenv 依赖
    "httpx>=0.27.0",          # 添加 httpx 用于发送 HTTP 请求
]

[tool.hatch.build.targets.wheel]
packages = ["server"]  # 또는 실제 소스 코드 위치


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
